# sportradar-demo

./: .env.example  .gitignore  ARCHITECTURE.md  CODEBASE_AUDIT.md  DEEP_DIVE_GUIDE.md  README.md  SPORTSCOUT_COMPLETE_FLOW.md  docker-compose.prod.yml  docker-compose.yml
backend/: .gitignore  Dockerfile  Dockerfile.prod  agent.py  main.py  pyproject.toml  requirements.txt
backend/db/: client.py  schema.py
backend/providers/: sportradar.py
backend/tools/: __init__.py  compare_entities.py  fetch_nba_data.py  generate_excel.py  search_history.py
backend/utils/: cache.py  download_store.py  rate_limiter.py  sse.py
frontend/: Dockerfile  Dockerfile.prod  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/: AgentStoryboard.jsx  ApprovalModal.jsx  BasketballSVG.jsx  ChatPanel.jsx  CustomCursor.jsx  LandingPage.jsx  RadarChart.jsx  StatsTable.jsx  TracePanel.jsx
frontend/src/hooks/: useAgentStream.js
frontend/src/styles/: globals.css
my-video/: package-lock.json  package.json
my-video/src/: ReActVideo.tsx  Root.tsx  constants.ts
my-video/src/components/: GlitchText.tsx  NeonCard.tsx  ParticleField.tsx  TextSlide.tsx  TypewriterCode.tsx
my-video/src/scenes/: IntroScene.tsx  LiveDemoScene.tsx  OutroScene.tsx  QueryFlowScene.tsx  StepByStepScene.tsx  ToolsRevealScene.tsx
